frame/support/test/tests/construct_runtime_ui/double_module_parts_default.stderr
error: `Config` is already included in `default`. Either remove `default` or remove `Config`
  --> $DIR/double_module_parts_default.rs:10:32
   |
10 |         Balance: balances::{default, Config},
   |                                      ^^^^^^
