frame/support/test/tests/construct_runtime_ui/double_module_parts_default.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub enum Runtime where
		Block = Block,
		NodeBlock = Block,
		UncheckedExtrinsic = UncheckedExtrinsic
	{
		System: system,
		Balance: balances::{default, Config},
	}
}

fn main() {}
